--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,8 @@ body {
   scroll-padding-top: 80px;
 }
 
-header,
 main {
-  margin: 0 20px;
-}
-
-header {
-  margin-top: 80px;
+  padding: 0 20px;
 }
 
 a {
@@ -44,16 +39,14 @@ a {
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
-  background-color: transparent;
+  background-color: #162d48;
   position: fixed;
   top: 0;
   z-index: 100;
-  transition: all 0.3s ease;
 }
 
 .navbar.scrolled {
-  background-color: #fff8f0;
-  box-shadow: 0 3px 10px rgba(255, 159, 67, 0.25);
+  box-shadow: 0 3px 10px rgba(85, 85, 85, 0.25);
 }
 
 .navbar-left {
@@ -77,7 +70,7 @@ a {
 
 .navbar-title p {
   font-size: 0.9rem;
-  color: #555;
+  color: #F8F8FF;
 }
 
 .nav-links {
@@ -100,17 +93,17 @@ a {
 .btn-login {
   background: transparent;
   border: 1.5px solid #e67e22;
-  border-radius: 30px;
+  border-radius: 12px;
   padding: 8px 20px;
   font-weight: 600;
   color: #e67e22;
   cursor: pointer;
-  transition: all 0.3s;
+  transition: 0.2s;
 }
 
 .btn-login:hover {
-  background-color: #ff9f43;
-  color: #fff;
+  color: #F8F8FF;
+  background-color: #e67e22;
 }
 
 /* =========================
@@ -152,8 +145,13 @@ a {
 ========================= */
 #home {
   width: 100%;
-  height: auto;
+  height: 100svh;
   display: flex;
+}
+
+.destination-details,
+.campus-map {
+  margin-top: 70px;
 }
 
 .destination-details {
@@ -162,6 +160,8 @@ a {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  background-color: #5e95a1;
+  padding-left: 20px;
 }
 
 .destination-details input {
@@ -178,6 +178,14 @@ a {
   object-fit: contain;
 }
 
+.room-info>h2 {
+  color: white;
+  border-bottom: #2f4048 solid 2px;
+  box-shadow: 0 2px 2px -2px lightgray;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
 .route-button {
   display: flex;
   flex-direction: column;
@@ -187,30 +195,34 @@ a {
 
 .route-button button {
   height: 30px;
-  font-size: 15px;
+  font-size: 1.05rem;
+  box-sizing: content-box;
+  padding: 5px;
+  border: none;
+  border-radius: 10px;
   align-items: center;
   justify-content: center;
   cursor: pointer;
 }
 
 #norm-route {
-  border-radius: 10px;
-  border: 1px solid black;
-  background-color: #ffd3a1;
+  border: 2px #e67e22;
+  font-size: 1rem;
+  color: #F8F8FF;
+  background-color: #e67e22;
 }
 
 #er-route {
   background-color: transparent;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-items: center;
+  border: 2px solid #2f4048;
+  color: #2f4048;
   gap: 20px;
 }
 
-#er-route img {
-  width: 20px;
-  height: 20px;
+#er-route:hover {
+  color: #F8F8FF;
+  background-color: #2f4048;
+  transition: 0.2s;
 }
 
 .current-location-details {
@@ -230,12 +242,12 @@ a {
 
 #loc-header {
   font-weight: normal;
-  font-size: 18px;
+  font-size: 1rem;
 }
 
 #loc-info {
   font-weight: bold;
-  font-size: 18px;
+  font-size: 1rem;
 }
 
 .campus-map {
@@ -243,7 +255,6 @@ a {
   display: flex;
   width: 100%;
   padding: 10px;
-  margin: 0;
   justify-content: center;
 }
 
