add zoom in and zoom out functionalities for user

--- a/css/style.css
+++ b/css/style.css
@@ -286,17 +286,23 @@ a {
   justify-content: center;
   align-items: flex-start;
   gap: 15px;
+  overflow: auto;
 }
 
 .campus-map {
-  flex: 1;
-  min-width: 600px;
-  max-width: 1500px;
+  transform-origin: center center ;
+  transition: transform 0.25s ease;
   position: relative;
+  display: inline-block;
+  cursor: grab;
+}
+
+.campus-map:active {
+  cursor: grabbing;
 }
 
 .campus-map img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
   max-height: 80vh;
   object-fit: contain;
@@ -322,12 +328,13 @@ a {
 }
 
 .zoom-buttons {
+  position: absolute;
+  top: 100px;
+  right: 20px;
+  z-index: 1000px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 10px;
-  position: sticky;
-  margin-top: 15px;
 }
 
 .zoom-buttons button {
