fixed paths in login and emergency maker

--- a/css/style.css
+++ b/css/style.css
@@ -386,7 +386,7 @@ a {
 .emergency-marker {
   width: 24px;
   height: 24px;
-  background-image: url('/Detourist-Campus-Navigation-App/assets/images/location.png');
+  background-image: url('../assets/images/location.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -724,7 +724,7 @@ a {
   height: 100svh;
   display: grid;
   grid-template-columns: 0.9fr 1.1fr;
-  background-image: url('/Detourist-Campus-Navigation-App/assets/images/location.png');
+  background-image: url('../assets/images/location.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
