Change login background image back to campus picture

--- a/css/style.css
+++ b/css/style.css
@@ -724,7 +724,7 @@ a {
   height: 100svh;
   display: grid;
   grid-template-columns: 0.9fr 1.1fr;
-  background-image: url('../assets/images/location.png');
+  background-image: url('../assets/images/slubakakeng.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
