Reorganize folder structure of assets

--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ a {
 .emergency-marker {
   width: 24px;
   height: 24px;
-  background-image: url('../assets/images/location.png');
+  background-image: url('../assets/icons/location.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -799,7 +799,7 @@ a {
   height: 100svh;
   display: grid;
   grid-template-columns: 0.9fr 1.1fr;
-  background-image: url('../assets/images/slubakakeng.jpg');
+  background-image: url('../assets/backgrounds/slubakakeng.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
